flask_web_app_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: hello-app-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: flask
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
        startupProbe:
          httpGet:
            path: /healthz
            port: 5000
          periodSeconds: 5
          failureThreshold: 12
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5000
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000
          periodSeconds: 10
          failureThreshold: 3
