flask_web_app_service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  namespace: hello-app-ns
spec:
  selector:
    app: hello-app
  ports:
  - port: 86
    targetPort: 5000
